--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,6 +1,11 @@
 name: CI
 
-on: [push]
+on:
+  push: # プッシュした時に実行
+    branches: # ブランチを指定
+      - main
+  repository_dispatch:
+    types: [contents_update]
 
 jobs:
   FrontDeploy:
@@ -19,4 +24,4 @@ jobs:
       # ↑ buildが違うコマンドなら、適宜変更して下さい
     - name: deploy to Firebase Hosting
       run: |
-        yarn deploy --token="${{ secrets.FIREBASE_TOKEN }}"
+        firebase deploy --token="${{ secrets.FIREBASE_TOKEN }}"
