--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "deploy": "firebase deploy",
     "start": "next start",
     "export": "next export",
     "lint": "next lint",
@@ -38,6 +39,7 @@
     "@types/react": "^17.0.19",
     "babel-loader": "^8.2.2",
     "eslint": "7.32.0",
+    "firebase-tools": "^9.10.0",
     "eslint-config-next": "11.1.2",
     "prettier": "2.3.2",
     "typescript": "^4.4.2"
