--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.32.1",
+    "react-transition-group": "^4.4.2",
     "recoil": "^0.4.1",
     "sass": "^1.39.0"
   },
@@ -38,10 +39,11 @@
     "@storybook/react": "^6.3.7",
     "@types/node": "^16.7.10",
     "@types/react": "^17.0.19",
+    "@types/react-transition-group": "^4.4.3",
     "babel-loader": "^8.2.2",
     "eslint": "7.32.0",
-    "firebase-tools": "^9.10.0",
     "eslint-config-next": "11.1.2",
+    "firebase-tools": "^9.10.0",
     "prettier": "2.3.2",
     "typescript": "^4.4.2"
   }
