--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -3,7 +3,7 @@ name: CI
 on:
   push: # プッシュした時に実行
     branches: # ブランチを指定
-      - main
+      - develop
   repository_dispatch:
     types: [contents_update]
 
@@ -24,4 +24,4 @@ jobs:
       # ↑ buildが違うコマンドなら、適宜変更して下さい
     - name: deploy to Firebase Hosting
       run: |
-        firebase deploy --token="${{ secrets.FIREBASE_TOKEN }}" --only hosting:prd
+        firebase deploy --token="${{ secrets.FIREBASE_TOKEN }}" --only hosting:dev
