--- a/.github/workflows/develop_push.yaml
+++ b/.github/workflows/develop_push.yaml
@@ -3,10 +3,8 @@ name: CI
 on:
   push: # プッシュした時に実行
     branches: # ブランチを指定
-      - main
-  repository_dispatch:
-    types: [contents_update]
-
+      - develop
+      
 jobs:
   FrontDeploy:
     name: FrontDeploy
@@ -24,4 +22,4 @@ jobs:
       # ↑ buildが違うコマンドなら、適宜変更して下さい
     - name: deploy to Firebase Hosting
       run: |
-        yarn deploy --token="${{ secrets.FIREBASE_TOKEN }}" --only hosting:prd
+        yarn deploy --token="${{ secrets.FIREBASE_TOKEN }}" --only hosting:dev
