--- a/.github/workflows/main_push.yaml
+++ b/.github/workflows/main_push.yaml
@@ -22,4 +22,4 @@ jobs:
       # ↑ buildが違うコマンドなら、適宜変更して下さい
     - name: deploy to Firebase Hosting
       run: |
-        yarn deploy --token="${{ secrets.FIREBASE_TOKEN }}" --only hosting:prd
+      yarn deployset:prd && yarn deploy --token="${{ secrets.FIREBASE_TOKEN }}" --only hosting:prd
