--- a/.github/workflows/main_push.yaml
+++ b/.github/workflows/main_push.yaml
@@ -21,5 +21,4 @@ jobs:
       run: yarn && yarn build && yarn export
       # ↑ buildが違うコマンドなら、適宜変更して下さい
     - name: deploy to Firebase Hosting
-      run: |
-      yarn deployset:prd && yarn deploy --token="${{ secrets.FIREBASE_TOKEN }}" --only hosting:prd
+      run: yarn deployset:prd && yarn deploy --token="${{ secrets.FIREBASE_TOKEN }}" --only hosting:prd
