--- a/firebase.json
+++ b/firebase.json
@@ -7,7 +7,8 @@
         "firebase.json",
         "**/.*",
         "**/node_modules/**"
-      ]
+      ],
+      "cleanUrls": true
     },
     {
       "target": "prd",
@@ -16,7 +17,8 @@
         "firebase.json",
         "**/.*",
         "**/node_modules/**"
-      ]
+      ],
+      "cleanUrls": true
     }
   ]
 }
