--- a/.github/workflows/develop_push.yaml
+++ b/.github/workflows/develop_push.yaml
@@ -3,7 +3,7 @@ name: CI
 on:
   push: # プッシュした時に実行
     branches: # ブランチを指定
-      - main
+      - develop
 
 jobs:
   FrontDeploy:
@@ -21,4 +21,4 @@ jobs:
       run: yarn && yarn build && yarn export
       # ↑ buildが違うコマンドなら、適宜変更して下さい
     - name: deploy to Firebase Hosting
-      run: yarn deployset:prd && yarn deploy --token="${{ secrets.FIREBASE_TOKEN }}" --only hosting:prd
+      run: yarn deployset:dev && yarn deploy --token="${{ secrets.FIREBASE_TOKEN }}" --only hosting:dev
