--- a/.github/workflows/main_push.yaml
+++ b/.github/workflows/main_push.yaml
@@ -13,10 +13,10 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@master
     - name: setup Node
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with: 
-        node-version: 12.x
-        registry-url: 'https://registry.npmjs.org'
+        node-version: '14'
+        cache: yarn
     - name: Install Dependencies
       run: yarn && yarn build && yarn export
       # ↑ buildが違うコマンドなら、適宜変更して下さい
